--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ PyGithub==2.1.1
 scikit_learn==1.3.2
 scipy==1.11.4
 setuptools==67.8.0
-torch==2.1.0
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.0+cpu
