--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 gdown==4.7.1
 icecream==2.1.3
 imblearn==0.0
-numpy==1.26.2
-pandas==2.1.4
+numpy==1.24.4
+pandas==2.0.3
 PyGithub==2.1.1
 scikit_learn==1.3.2
-scipy==1.11.4
+scipy==1.10.1
 setuptools==67.8.0
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==2.1.0+cpu
-pyyaml==6.0.1 
+GitPython==3.1.7
+PyDriller==1.15.2
+PyYAML==5.3.1
+options==1.4.10
+testresources==2.0.1
+dateparser==0.7.6
+networkx==2.6.3
+beautifulsoup4==4.10.0
+lxml==4.6.4
+packaging==21.3
+regex==2022.1.18
