--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
 __pycache__
-repo
-Tic-tac-toe-Game-using-Network-Socket-APIs
-pretrained_models
 save
-github_access_token.txt
-deepjit_torchserve
 .vscode
-torchserve
 dist
 build
 defectguard.egg-info
-publish.sh
 build-publish-test.sh
-dvc-add.sh
 remove-files.sh
 metadata
 logs
-test.ipynb
-dataset
 pyszz*
+dg_cache
