--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ PyGithub==2.1.1
 scikit_learn==1.2.2
 scipy==1.10.1
 setuptools==67.8.0
--f https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.0+cpu
+torch==2.1.0
 GitPython==3.1.7
 PyDriller==1.15.2
 PyYAML==5.3.1
