--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
+setuptools
 gdown==5.1.0
 icecream==2.1.3
 imblearn==0.0
-numpy==1.24.4
+numpy
 pandas==2.0.3
 PyGithub==2.1.1
-scikit_learn==1.2.2
-scipy==1.10.1
-setuptools==67.8.0
+scikit_learn
+scipy
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.0+cpu
+torch==2.2.0+cpu
+pyyaml
