--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,21 +1,20 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python package
 
 on:
   push:
-    branches: ["main"]
+    branches: ["objective-1"]
   pull_request:
-    branches: ["main"]
+    branches: ["objective-1"]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.10"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -25,17 +24,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up User
+      - name: Check Dockerfile
         run: |
-          git config user.name manhlamabc123
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install numpy pandas PyGithub Requests tqdm scikit-learn torch imblearn scipy gdown
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Install DefectGuard
-        run: |
-          pip install -i https://test.pypi.org/simple/ defectguard==0.1.32
-      - name: Run DefectGuard
-        run: |
-          defectguard -models deepjit -dataset platform -repo . -top 20 -main_language Python -sort -threshold 0.1
+          docker build -t my-image .
